--- a/admin/member-update.html
+++ b/admin/member-update.html
@@ -131,6 +131,9 @@
                             <span id="userDisplayName"></span>
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userMenu">
+                            <li><a class="dropdown-item" href="./member-profile.html">會員中心</a></li>
+                            <li><a class="dropdown-item" href="./member-orders.html">我的訂單</a></li>
+                            <li><a class="dropdown-item" href="./chat-room.html">聊天室</a></li>
                             <li><a class="dropdown-item" href="#" id="logoutBtn">Logout</a></li>
                         </ul>
                     </li>
@@ -279,6 +282,7 @@
         </div>
     </div>
 
+    <script src="/js/config.js"></script>
     <!-- jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     <!-- Bootstrap JS -->
@@ -346,7 +350,7 @@
             $('#logoutBtn').on('click', function (e) {
                 e.preventDefault();
 
-                fetch('http://localhost:8080/api/members/logout', {
+                fetch(`${BASE_URL}/api/members/logout`, {
                     method: 'POST',
                     credentials: 'include'
                 })
@@ -391,7 +395,7 @@
 
         // 載入購物車內容
         function loadCartContents() {
-            fetch('http://localhost:8080/api/cart', {
+            fetch(`${BASE_URL}/api/cart`, {
                 method: 'GET',
                 credentials: 'include'
             })
@@ -413,7 +417,7 @@
             const formData = new FormData();
             formData.append('photo', photoFile);
 
-            return fetch(`http://localhost:8080/api/members/${memberNo}/photo`, {
+            return fetch(`${BASE_URL}/api/members/${memberNo}/photo`, {
                 method: 'POST',
                 body: formData,
                 credentials: 'include'
@@ -429,7 +433,7 @@
                     // 刷新照片預覽（加入時間戳避免快取）
                     const timestamp = new Date().getTime();
                     $('#memberPhotoPreview').attr('src',
-                        `http://localhost:8080/api/members/${memberNo}/photo?t=${timestamp}`);
+                        `${BASE_URL}/api/members/${memberNo}/photo?t=${timestamp}`);
                     alert('照片上傳成功');
                 })
                 .catch(error => {
@@ -442,7 +446,7 @@
 
         // 載入會員資料
         function loadMemberData(memberNo) {
-            fetch(`http://localhost:8080/api/members/${memberNo}`, {
+            fetch(`${BASE_URL}/api/members/${memberNo}`, {
                 credentials: 'include'
             })
                 .then(response => {
@@ -470,7 +474,7 @@
 
                     // 更新照片預覽（加入時間戳和錯誤處理）
                     const timestamp = new Date().getTime();
-                    const photoUrl = `http://localhost:8080/api/members/${member.memberNo}/photo?t=${timestamp}`;
+                    const photoUrl = `${BASE_URL}/api/members/${member.memberNo}/photo?t=${timestamp}`;
                     $('#memberPhotoPreview')
                         .attr('src', photoUrl)
                         .on('error', function () {
@@ -504,7 +508,7 @@
                 memberPassword: $('#memberPassword').val().trim() || undefined
             };
 
-            fetch(`http://localhost:8080/api/members/${memberNo}`, {
+            fetch(`${BASE_URL}/api/members/${memberNo}`, {
                 method: 'PUT',
                 headers: {
                     'Content-Type': 'application/json',
