--- a/admin/productcategory-manage.html
+++ b/admin/productcategory-manage.html
@@ -178,6 +178,9 @@
                             <span id="userDisplayName"></span>
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userMenu">
+                            <li><a class="dropdown-item" href="./member-profile.html">會員中心</a></li>
+                            <li><a class="dropdown-item" href="./member-orders.html">我的訂單</a></li>
+                            <li><a class="dropdown-item" href="./chat-room.html">聊天室</a></li>
                             <li><a class="dropdown-item" href="#" id="logoutBtn">Logout</a></li>
                         </ul>
                     </li>
@@ -237,6 +240,7 @@
         </div>
     </div>
 
+    <script src="/js/config.js"></script>
     <!-- jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     <!-- Bootstrap JS -->
@@ -249,7 +253,7 @@
         const CategoryHandler = {
             // 載入所有類別資料
             loadCategories: function () {
-                fetch('http://localhost:8080/api/categories')
+                fetch(`${BASE_URL}/api/categories`)
                     .then(response => {
                         if (!response.ok) {
                             throw new Error('獲取類別資料失敗');
@@ -298,7 +302,7 @@
 
                 try {
                     // 呼叫API查詢單一類別
-                    const response = await fetch(`http://localhost:8080/api/categories/${searchText}`);
+                    const response = await fetch(`${BASE_URL}/api/categories/${searchText}`);
                     if (!response.ok) {
                         throw new Error('查詢類別失敗');
                     }
@@ -348,7 +352,7 @@
                 // 顯示確認對話框
                 if (confirm('確定要刪除此商品類別嗎？此操作無法復原。')) {
                     // 呼叫刪除 API
-                    fetch(`http://localhost:8080/api/categories/${categoryNo}`, {
+                    fetch(`${BASE_URL}/api/categories/${categoryNo}`, {
                         method: 'DELETE',
                     })
                         .then(response => {
@@ -425,7 +429,7 @@
 
             // 載入購物車內容
             function loadCartContents() {
-                fetch('http://localhost:8080/api/cart', {
+                fetch(`${BASE_URL}/api/cart`, {
                     method: 'GET',
                     credentials: 'include'
                 })
@@ -444,7 +448,7 @@
 
             // 搜尋商品函數
             function searchProducts(searchText) {
-                fetch(`http://localhost:8080/api/products/search?name=${encodeURIComponent(searchText)}`)
+                fetch(`${BASE_URL}/api/products/search?name=${encodeURIComponent(searchText)}`)
                     .then(response => {
                         if (!response.ok) {
                             throw new Error('搜尋失敗');
@@ -476,7 +480,7 @@
             // 處理登出
             $('#logoutBtn').on('click', function (e) {
                 e.preventDefault();
-                fetch('http://localhost:8080/api/members/logout', {
+                fetch(`${BASE_URL}/api/members/logout`, {
                     method: 'POST',
                     credentials: 'include'
                 })
