--- a/forgot-password.html
+++ b/forgot-password.html
@@ -171,6 +171,8 @@
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userMenu">
                             <li><a class="dropdown-item" href="./member-profile.html">會員中心</a></li>
+                            <li><a class="dropdown-item" href="./member-orders.html">我的訂單</a></li>
+                            <li><a class="dropdown-item" href="./chat-room.html">聊天室</a></li>
                             <li><a class="dropdown-item" href="#" id="logoutBtn">Logout</a></li>
                         </ul>
                     </li>
@@ -211,6 +213,7 @@
         </div>
     </div>
 
+    <script src="./js/config.js"></script>
     <!-- jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     <!-- Bootstrap JS -->
@@ -244,7 +247,7 @@
             $('#logoutBtn').on('click', function (e) {
                 e.preventDefault();
 
-                fetch('http://localhost:8080/api/members/logout', {
+                fetch(`${BASE_URL}/api/members/logout`, {
                     method: 'POST',
                     credentials: 'include'
                 })
@@ -264,7 +267,7 @@
 
             // 更新購物車數量標籤
             function updateCartBadge() {
-                fetch('http://localhost:8080/api/cart', {
+                fetch(`${BASE_URL}/api/cart`, {
                     credentials: 'include'
                 })
                     .then(response => response.json())
@@ -318,7 +321,7 @@
                 }
 
                 // 發送重置密碼請求
-                fetch('http://localhost:8080/api/members/forgot-password', {
+                fetch(`${BASE_URL}/api/members/forgot-password`, {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
