--- a/member-profile.html
+++ b/member-profile.html
@@ -96,6 +96,9 @@
                             <span id="userDisplayName"></span>
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userMenu">
+                            <li><a class="dropdown-item" href="./member-profile.html">會員中心</a></li>
+                            <li><a class="dropdown-item" href="./member-orders.html">我的訂單</a></li>
+                            <li><a class="dropdown-item" href="./chat-room.html">聊天室</a></li>
                             <li><a class="dropdown-item" href="#" id="logoutBtn">Logout</a></li>
                         </ul>
                     </li>
@@ -236,6 +239,7 @@
         </div>
     </div>
 
+    <script src="./js/config.js"></script>
     <!-- jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     <!-- Bootstrap JS -->
@@ -269,7 +273,7 @@
             $('#logoutBtn').on('click', function (e) {
                 e.preventDefault();
 
-                fetch('http://localhost:8080/api/members/logout', {
+                fetch(`${BASE_URL}/api/members/logout`, {
                     method: 'POST',
                     credentials: 'include'
                 })
@@ -289,7 +293,7 @@
 
             // 更新購物車數量標籤
             function updateCartBadge() {
-                fetch('http://localhost:8080/api/cart', {
+                fetch(`${BASE_URL}/api/cart`, {
                     credentials: 'include'
                 })
                     .then(response => response.json())
@@ -310,7 +314,7 @@
 
             // 載入會員資料
             function loadMemberData() {
-                fetch(`http://localhost:8080/api/members/${user.memberNo}`, {
+                fetch(`${BASE_URL}/api/members/${user.memberNo}`, {
                     credentials: 'include'
                 })
                     .then(response => response.json())
@@ -343,7 +347,7 @@
 
             // 載入會員照片
             function loadMemberPhoto() {
-                const photoUrl = `http://localhost:8080/api/members/${user.memberNo}/photo`;
+                const photoUrl = `${BASE_URL}/api/members/${user.memberNo}/photo`;
                 $('#memberPhoto').attr('src', photoUrl)
                     .on('error', function () {
                         // 如果載入失敗，顯示預設圖片
@@ -359,7 +363,7 @@
                 const formData = new FormData();
                 formData.append('photo', file);
 
-                fetch(`http://localhost:8080/api/members/${user.memberNo}/photo`, {
+                fetch(`${BASE_URL}/api/members/${user.memberNo}/photo`, {
                     method: 'POST',
                     body: formData,
                     credentials: 'include'
@@ -424,7 +428,7 @@
                     updateData.memberPassword = $('#newPassword').val();
                 }
 
-                fetch(`http://localhost:8080/api/members/${user.memberNo}`, {
+                fetch(`${BASE_URL}/api/members/${user.memberNo}`, {
                     method: 'PUT',
                     headers: {
                         'Content-Type': 'application/json'
