--- a/admin/admin-index.html
+++ b/admin/admin-index.html
@@ -174,6 +174,9 @@
                             <span id="userDisplayName"></span>
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userMenu">
+                            <li><a class="dropdown-item" href="./member-profile.html">會員中心</a></li>
+                            <li><a class="dropdown-item" href="./member-orders.html">我的訂單</a></li>
+                            <li><a class="dropdown-item" href="./chat-room.html">聊天室</a></li>
                             <li><a class="dropdown-item" href="#" id="logoutBtn">Logout</a></li>
                         </ul>
                     </li>
@@ -259,6 +262,7 @@
         </div>
     </div>
 
+    <script src="/js/config.js"></script>
     <!-- jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     <!-- Bootstrap JS -->
@@ -294,7 +298,7 @@
 
             // 載入購物車內容函數
             function loadCartContents() {
-                fetch('http://localhost:8080/api/cart', {
+                fetch(`${BASE_URL}/api/cart`, {
                     method: 'GET',
                     credentials: 'include'
                 })
@@ -335,7 +339,7 @@
 
             // 搜尋商品函數
             function searchProducts(searchText) {
-                fetch(`http://localhost:8080/api/products/search?name=${encodeURIComponent(searchText)}`)
+                fetch(`${BASE_URL}/api/products/search?name=${encodeURIComponent(searchText)}`)
                     .then(response => {
                         if (!response.ok) {
                             throw new Error('搜尋失敗');
@@ -355,7 +359,7 @@
             $('#logoutBtn').on('click', function (e) {
                 e.preventDefault();
 
-                fetch('http://localhost:8080/api/members/logout', {
+                fetch(`${BASE_URL}/api/members/logout`, {
                     method: 'POST',
                     credentials: 'include'
                 })
@@ -392,7 +396,7 @@
         });
         $(document).ready(function () {
             // API 端點配置
-            const API_BASE_URL = 'http://localhost:8080/api';
+            const API_BASE_URL = `${BASE_URL}/api`;
             const API_ENDPOINTS = {
                 MEMBERS: `${API_BASE_URL}/members`,
                 PRODUCTS: `${API_BASE_URL}/products`,
@@ -402,7 +406,7 @@
             // 儀表板數據載入
             function loadDashboardData() {
                 // 載入會員數據
-                fetch('http://localhost:8080/api/members')
+                fetch(`${BASE_URL}/api/members`)
                     .then(response => response.json())
                     .then(members => {
                         // 更新會員總數
@@ -418,7 +422,7 @@
                     });
 
                 // 載入商品數據
-                fetch('http://localhost:8080/api/products')
+                fetch(`${BASE_URL}/api/products`)
                     .then(response => response.json())
                     .then(products => {
                         // 商品總數
@@ -445,13 +449,13 @@
                     });
 
                 // 載入類別數據
-                fetch('http://localhost:8080/api/categories')
+                fetch(`${BASE_URL}/api/categories`)
                     .then(response => response.json())
                     .then(categories => {
                         $('#totalCategories').text(categories.length);
 
                         // 載入商品數據以計算主要類別
-                        fetch('http://localhost:8080/api/products')
+                        fetch(`${BASE_URL}/api/products`)
                             .then(response => response.json())
                             .then(products => {
                                 const categoryCount = {};
