--- a/admin/orders-manage.html
+++ b/admin/orders-manage.html
@@ -203,6 +203,9 @@
                             <span id="userDisplayName"></span>
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userMenu">
+                            <li><a class="dropdown-item" href="./member-profile.html">會員中心</a></li>
+                            <li><a class="dropdown-item" href="./member-orders.html">我的訂單</a></li>
+                            <li><a class="dropdown-item" href="./chat-room.html">聊天室</a></li>
                             <li><a class="dropdown-item" href="#" id="logoutBtn">Logout</a></li>
                         </ul>
                     </li>
@@ -304,6 +307,7 @@
 
     </div>
 
+    <script src="/js/config.js"></script>
     <!-- jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     <!-- Bootstrap JS -->
@@ -336,7 +340,7 @@
 
             // 載入購物車內容函數
             function loadCartContents() {
-                fetch('http://localhost:8080/api/cart', {
+                fetch(`${BASE_URL}/api/cart`, {
                     method: 'GET',
                     credentials: 'include'
                 })
@@ -360,7 +364,7 @@
             $('#logoutBtn').on('click', function (e) {
                 e.preventDefault();
 
-                fetch('http://localhost:8080/api/members/logout', {
+                fetch(`${BASE_URL}/api/members/logout`, {
                     method: 'POST',
                     credentials: 'include'
                 })
@@ -389,7 +393,7 @@
 
             // 載入所有訂單
             function loadOrders(searchParams = {}) {
-                let url = 'http://localhost:8080/api/orders/search';
+                let url = `${BASE_URL}/api/orders/search`;
                 if (Object.keys(searchParams).length > 0) {
                     const params = new URLSearchParams(searchParams);
                     url += '?' + params.toString();
@@ -430,7 +434,7 @@
 
             // 載入訂單明細
             function loadOrderDetails(ordersNo, detailsRow) {
-                fetch(`http://localhost:8080/api/orders/${ordersNo}/details`, {
+                fetch(`${BASE_URL}/api/orders/${ordersNo}/details`, {
                     method: 'GET',
                     credentials: 'include'
                 })
@@ -503,7 +507,7 @@
                 $(this).after(detailsRow);
 
                 // 載入訂單明細
-                fetch(`http://localhost:8080/api/orders/${ordersNo}/details`, {
+                fetch(`${BASE_URL}/api/orders/${ordersNo}/details`, {
                     method: 'GET',
                     credentials: 'include'
                 })
@@ -572,7 +576,7 @@
                 const loadingToast = showLoadingToast(`正在產生${type === 'excel' ? 'Excel' : 'PDF'}報表...`);
 
                 try {
-                    const response = await fetch(`http://localhost:8080/api/orders/export/${type}`, {
+                    const response = await fetch(`${BASE_URL}/api/orders/export/${type}`, {
                         method: 'GET',
                         credentials: 'include'
                     });
