--- a/admin/product-create.html
+++ b/admin/product-create.html
@@ -131,6 +131,9 @@
                             <span id="userDisplayName"></span>
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userMenu">
+                            <li><a class="dropdown-item" href="./member-profile.html">會員中心</a></li>
+                            <li><a class="dropdown-item" href="./member-orders.html">我的訂單</a></li>
+                            <li><a class="dropdown-item" href="./chat-room.html">聊天室</a></li>
                             <li><a class="dropdown-item" href="#" id="logoutBtn">Logout</a></li>
                         </ul>
                     </li>
@@ -208,6 +211,7 @@
         </div>
     </div>
 
+    <script src="/js/config.js"></script>
     <!-- jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     <!-- Bootstrap JS -->
@@ -240,7 +244,7 @@
 
             // 載入購物車內容函數
             function loadCartContents() {
-                fetch('http://localhost:8080/api/cart', {
+                fetch(`${BASE_URL}/api/cart`, {
                     method: 'GET',
                     credentials: 'include'
                 })
@@ -264,7 +268,7 @@
             $('#logoutBtn').on('click', function (e) {
                 e.preventDefault();
 
-                fetch('http://localhost:8080/api/members/logout', {
+                fetch(`${BASE_URL}/api/members/logout`, {
                     method: 'POST',
                     credentials: 'include'
                 })
@@ -293,7 +297,7 @@
 
             // 載入商品類別
             function loadCategories() {
-                fetch('http://localhost:8080/api/categories')
+                fetch(`${BASE_URL}/api/categories`)
                     .then(response => response.json())
                     .then(categories => {
                         const select = $('#categoryNo');
@@ -347,7 +351,7 @@
                     formData.append('image', imageFile);
                 }
 
-                fetch('http://localhost:8080/api/products', {
+                fetch(`${BASE_URL}/api/products`, {
                     method: 'POST',
                     body: formData
                 })
