--- a/admin/product-update.html
+++ b/admin/product-update.html
@@ -131,6 +131,9 @@
                             <span id="userDisplayName"></span>
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userMenu">
+                            <li><a class="dropdown-item" href="./member-profile.html">會員中心</a></li>
+                            <li><a class="dropdown-item" href="./member-orders.html">我的訂單</a></li>
+                            <li><a class="dropdown-item" href="./chat-room.html">聊天室</a></li>
                             <li><a class="dropdown-item" href="#" id="logoutBtn">Logout</a></li>
                         </ul>
                     </li>
@@ -217,6 +220,7 @@
         </div>
     </div>
 
+    <script src="/js/config.js"></script>
     <!-- jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     <!-- Bootstrap JS -->
@@ -249,7 +253,7 @@
 
             // 載入購物車內容函數
             function loadCartContents() {
-                fetch('http://localhost:8080/api/cart', {
+                fetch(`${BASE_URL}/api/cart`, {
                     method: 'GET',
                     credentials: 'include'
                 })
@@ -273,7 +277,7 @@
             $('#logoutBtn').on('click', function (e) {
                 e.preventDefault();
 
-                fetch('http://localhost:8080/api/members/logout', {
+                fetch(`${BASE_URL}/api/members/logout`, {
                     method: 'POST',
                     credentials: 'include'
                 })
@@ -303,7 +307,7 @@
             // 載入商品類別
             async function loadCategories() {
                 try {
-                    const response = await fetch('http://localhost:8080/api/categories', {
+                    const response = await fetch(`${BASE_URL}/api/categories`, {
                         method: 'GET',
                         credentials: 'include'
                     });
@@ -338,7 +342,7 @@
                 }
 
                 try {
-                    const response = await fetch(`http://localhost:8080/api/products/${productNo}`, {
+                    const response = await fetch(`${BASE_URL}/api/products/${productNo}`, {
                         method: 'GET',
                         credentials: 'include'
                     });
@@ -355,7 +359,7 @@
 
                     // 顯示當前商品圖片
                     $('#currentImage').attr('src',
-                        `http://localhost:8080/api/products/${product.product_no}/image`);
+                        `${BASE_URL}/api/products/${product.product_no}/image`);
                 } catch (error) {
                     console.error('載入商品數據失敗:', error);
                     alert('載入商品數據失敗，請稍後再試');
@@ -414,7 +418,7 @@
 
                 try {
                     const response = await fetch(
-                        `http://localhost:8080/api/products/${productData.product_no}`, {
+                        `${BASE_URL}/api/products/${productData.product_no}`, {
                         method: 'PUT',
                         body: formData,
                         credentials: 'include'
