--- a/member-orders.html
+++ b/member-orders.html
@@ -174,6 +174,7 @@
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userMenu">
                             <li><a class="dropdown-item" href="./member-profile.html">會員中心</a></li>
                             <li><a class="dropdown-item" href="./member-orders.html">我的訂單</a></li>
+                            <li><a class="dropdown-item" href="./chat-room.html">聊天室</a></li>
                             <li><a class="dropdown-item" href="#" id="logoutBtn">Logout</a></li>
                         </ul>
                     </li>
@@ -228,6 +229,7 @@
         </div>
     </div>
 
+    <script src="./js/config.js"></script>
     <!-- jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     <!-- Bootstrap JS -->
@@ -271,7 +273,7 @@
                     </div>
                 `);
 
-                fetch(`http://localhost:8080/api/orders/member/${memberNo}`, {
+                fetch(`${BASE_URL}/api/orders/member/${memberNo}`, {
                     credentials: 'include'
                 })
                     .then(response => response.json())
@@ -408,7 +410,7 @@
                 `);
                 new bootstrap.Modal(document.getElementById('orderDetailsModal')).show();
 
-                fetch(`http://localhost:8080/api/orders/${ordersNo}/details`, {
+                fetch(`${BASE_URL}/api/orders/${ordersNo}/details`, {
                     credentials: 'include'
                 })
                     .then(response => {
@@ -470,7 +472,7 @@
 
             // 更新購物車數量標籤
             function updateCartBadge() {
-                fetch('http://localhost:8080/api/cart', {
+                fetch(`${BASE_URL}/api/cart`, {
                     credentials: 'include'
                 })
                     .then(response => response.json())
@@ -490,7 +492,7 @@
             // 處理登出
             $('#logoutBtn').on('click', function (e) {
                 e.preventDefault();
-                fetch('http://localhost:8080/api/members/logout', {
+                fetch(`${BASE_URL}/api/members/logout`, {
                     method: 'POST',
                     credentials: 'include'
                 })
