--- a/myorders.html
+++ b/myorders.html
@@ -144,6 +144,8 @@
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userMenu">
                             <li><a class="dropdown-item" href="./member-profile.html">會員中心</a></li>
+                            <li><a class="dropdown-item" href="./member-orders.html">我的訂單</a></li>
+                            <li><a class="dropdown-item" href="./chat-room.html">聊天室</a></li>
                             <li><a class="dropdown-item" href="#" id="logoutBtn">Logout</a></li>
                         </ul>
                     </li>
@@ -220,6 +222,7 @@
         </div>
     </div>
 
+    <script src="./js/config.js"></script>
     <!-- jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     <!-- Bootstrap JS -->
@@ -258,7 +261,7 @@
 
             // 載入購物車內容函數
             function loadCartContents() {
-                fetch('http://localhost:8080/api/cart', {
+                fetch(`${BASE_URL}/api/cart`, {
                     method: 'GET',
                     credentials: 'include'
                 })
@@ -295,7 +298,7 @@
             $('#logoutBtn').on('click', function (e) {
                 e.preventDefault();
 
-                fetch('http://localhost:8080/api/members/logout', {
+                fetch(`${BASE_URL}/api/members/logout`, {
                     method: 'POST',
                     credentials: 'include'
                 })
@@ -324,7 +327,7 @@
             function loadOrders() {
                 if (!currentMemberNo) return;
                 
-                fetch(`http://localhost:8080/api/orders/member/${currentMemberNo}`, {
+                fetch(`${BASE_URL}/api/orders/member/${currentMemberNo}`, {
                     method: 'GET',
                     credentials: 'include'
                 })
@@ -378,7 +381,7 @@
 
             // 載入訂單詳情
             function loadOrderDetails(ordersNo) {
-                fetch(`http://localhost:8080/api/orders/${ordersNo}/details`, {
+                fetch(`${BASE_URL}/api/orders/${ordersNo}/details`, {
                     method: 'GET',
                     credentials: 'include'
                 })
