--- a/reset-password.html
+++ b/reset-password.html
@@ -148,6 +148,8 @@
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userMenu">
                             <li><a class="dropdown-item" href="./member-profile.html">會員中心</a></li>
+                            <li><a class="dropdown-item" href="./member-orders.html">我的訂單</a></li>
+                            <li><a class="dropdown-item" href="./chat-room.html">聊天室</a></li>
                             <li><a class="dropdown-item" href="#" id="logoutBtn">Logout</a></li>
                         </ul>
                     </li>
@@ -186,6 +188,7 @@
         </div>
     </div>
 
+    <script src="./js/config.js"></script>
     <!-- jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     <!-- Bootstrap JS -->
@@ -219,7 +222,7 @@
             $('#logoutBtn').on('click', function (e) {
                 e.preventDefault();
 
-                fetch('http://localhost:8080/api/members/logout', {
+                fetch(`${BASE_URL}/api/members/logout`, {
                     method: 'POST',
                     credentials: 'include'
                 })
@@ -239,7 +242,7 @@
 
             // 更新購物車數量標籤
             function updateCartBadge() {
-                fetch('http://localhost:8080/api/cart', {
+                fetch(`${BASE_URL}/api/cart`, {
                     credentials: 'include'
                 })
                     .then(response => response.json())
@@ -284,7 +287,7 @@
                 }
 
                 // 發送重置密碼請求
-                fetch('http://localhost:8080/api/members/reset-password', {
+                fetch(`${BASE_URL}/api/members/reset-password`, {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
@@ -317,7 +320,7 @@
         });
         // 驗證token函數(放在 ready 函數外)
         function validateToken(token) {
-            fetch(`http://localhost:8080/api/members/validate-reset-token?token=${token}`)
+            fetch(`${BASE_URL}/api/members/validate-reset-token?token=${token}`)
                 .then(response => response.json())
                 .then(data => {
                     if (!data.valid) {
